--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <div class="logo">SVGM School</div>
+        <div class="logo">
+            <img src="logo.png" alt="SVGM School Logo" height="50"/>
+            </div>
         <nav>
             <ul>
                 <li><a href="#about">About Us</a></li>
