--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <section id="about">
             <h2>About Us</h2>
+            <img src="myphoto.jpg" alt="My Photo" width="300">
             <p>Established in 2014, our school provides quality education from Upper Primary to High Secondary levels.</p>
         </section>
 
